--- a/photoshopgallery.html
+++ b/photoshopgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Web Maker</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
     <!-- Filter -->
     
 
@@ -219,7 +219,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="PAZme55M8K2NhG8L4YE/NCmjCMpsSWSeRpxfQJnPb7MPReYfKaiSuAYldrivQZT0cPIBG1IKzjXn69lzAZKHox2z4HA3bYUV7gBmeE5yY+AkRFwyu04wCxq0qGzuSCTG" data-form-email="true">
+                    <input type="hidden" value="W3W1fwTnunPh4I8DTUY0uvWRiEVChOwIGTl0BQc1DzRqCYhbmHloaGg+qdgtf8+AeJZyrvJN1jZJJycHPzbDDVjGmsCVUzEOC+Cu8zr+nuS19wzSdaMN2fjQCCCSECoa" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
