--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Website Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Builder</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);"></div>
 
@@ -99,7 +99,7 @@
 
 <section class="mbr-section" id="content8-53" data-bg-video="https://www.youtube.com/embed/gnikHiysgPw?rel=0&amp;amp;showinfo=0&amp;autoplay=0&amp;loop=0" style="padding-top: 160px; padding-bottom: 160px;">
 
-    <div class="mbr-overlay" style="opacity: 0.4; background-color: rgb(0, 0, 0);">
+    <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);">
     </div>
 
     <div class="container">
@@ -226,6 +226,18 @@
     </div>
 </section>
 
+<section class="mbr-section mbr-section__container" id="buttons1-6o" style="background-color: rgb(23, 25, 30); padding-top: 20px; padding-bottom: 20px;">
+
+    <div class="container">
+        <div class="row">
+            <div class="col-xs-12">
+                <div class="text-xs-center"> <a class="btn btn-white-outline btn-white" href="https://www.youtube.com/watch?v=pNp-MNuQLk4">See What I Am Working On</a></div>
+            </div>
+        </div>
+    </div>
+
+</section>
+
 <section class="mbr-footer footer4 mbr-section mbr-section-md-padding" id="contacts4-4m" style="background-color: rgb(0, 0, 0); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
@@ -246,7 +258,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="TzAuS5dc6W1hgTRNH0VWExlKZu4g1kYZy+rAwgQmr9EPQUJlVvUMWi00X4ZKaxJYgUQS5W4vo6kCZHPiKhAeZ5iQJMs7Ao+l1aJhFaxDbBaLsuy4Cb3p8G1djmKuoBBd" data-form-email="true">
+                    <input type="hidden" value="CAxShe/D6knWDNgkArhO0VNREnIoYuU8qWNrww6/n75m5CeSctNrgCNbFxigL0VU7MZtWF/oOr76Tng+7F9apHf4eV5NMPKjDqeQ+bjjEKvv4+IUg8lUyefBBg0JNWYA" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
