--- a/word.html
+++ b/word.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobirise.com</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4x" style="background-image: url(assets/images/mbr-9-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4x" style="background-image: url(assets/images/mbr-9-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
 
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="X0oXzfQ0nh0HgCB63526/ddSFv3T/TjydjGCwxBTlmszzxpHmpTfaTGnyHEIisrkuuI30y35h4oJYKscM432wStXbUdPt7oBIqUrcwGvbvYSzGQElCj95ILTn9UMg7ux" data-form-email="true">
+                    <input type="hidden" value="VzvaCrbnaJ09waBhCtvu4NNq9TF5ouGlVweSeBBuGxdRrsNvsYrHcs+PqRRRvepdgxd6cDtZYz6A7adfLHHnc6dxCzbgnWBlZ3cxppBaz2p8AEn84yZ1CNs1CEhGpMR1" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
