--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4o" style="background-image: url(assets/images/mbr-3-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.9; background-color: rgb(0, 0, 0);"></div>
 
@@ -231,7 +231,7 @@
     <div class="container">
         <div class="row">
             <div class="col-xs-12">
-                <div class="text-xs-center"> <a class="btn btn-white-outline btn-white" href="https://www.youtube.com/watch?v=AybgFJ2D2FU">Who I Am</a></div>
+                <div class="text-xs-center"> <a class="btn btn-white-outline btn-white" href="https://youtu.be/rRXMTOVr8VA">Who I Am</a></div>
             </div>
         </div>
     </div>
@@ -258,7 +258,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="iw5fdlytZKLijAcoYNrU7oVzj5BOx9hnaK2aJ31BY5cu+ywZUYaPgOz9+Pi/sJT/X2Qux4DJvxBpRo361+TooeoSbJTaPwLs4J3qeEECN6cDg4v8vcuFGtePMGNfYzlW" data-form-email="true">
+                    <input type="hidden" value="0QE6titxrOPULj7jA/1ViR869UAvJXhxIDLO8EuhFjzIKqKiqfRGWdSxb22NJoXHhUwU6Ypf99yLFzBeSr35uyIIfQwd6xwR0VWyDXsHrHYG2MS2Y4H0cC8ZJUKTS/X1" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
