--- a/photoshopgallery.html
+++ b/photoshopgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop web page development</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple drag and drop web site generator software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-3m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 3rem;">
     <!-- Filter -->
     
 
@@ -219,7 +219,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="DlpL9zgwP6J+4iEI/ZKBqafTbwQmrcAR75Hy/NSH+5N3HMu1Nria7KU+xxKug6dU1GBoSW5HjvFLRM4X0wXuVo+jbI5mfLfjlM98zBda0wh4L2A8678yD0uwGuapOkDo" data-form-email="true">
+                    <input type="hidden" value="s/6HudTJZ76W48dllGrWHOUBMb9S2UoTz4Lew4+15eYQnmkGJj++ADJe2AbovxgfXRdiRHL0OQ16JPeUllCQfjMq2hGKY24vcONYTDU745+Kd0kz+QPO1COGz/CXX6ww" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
