--- a/word.html
+++ b/word.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">free site builder software download</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4x" style="background-image: url(assets/images/mbr-9-2000x1333.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple responsive site creator software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-section-with-arrow mbr-after-navbar" id="header1-4x" style="background-image: url(assets/images/mbr-9-2000x1333.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.8; background-color: rgb(0, 0, 0);"></div>
 
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="wTk3ArfHeIzr58p81OaIdZmykHJuCtFtkdybWlcIAqJSDIZBcUpok/pYeg1hNLyOopetBalX+ommuh9I8ZWnhEiwgBHcD6SlwPohTb+vvzg0LbhUacG1mcMy/06aCFZn" data-form-email="true">
+                    <input type="hidden" value="318bcVhAfimVE7lZLUFmkdNo/Dfv2VlTDmYlf1Rqp8nsJ9UOccfOBdHXShho7SBo9Ioyc2SK/RlQdQ1GO+kAaLycEPjimgw3oeFE3TzUBaBsfDNKLWjPrVdOnNK6FRuM" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
