--- a/12 Inch Record.html
+++ b/12 Inch Record.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-8y" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-8y" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -137,7 +137,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="FIv7LVHDLxCSt0dhXpayT/fBgtiGfLr87CMyZhqJ0/Ay2hh2XuocCxB54OleYYsX/b10VACAKKNbyEsiP47ktV4EC1pU6YORjy1xz9raPuPeB/Xlcc0kN1La5cUPatDL" data-form-email="true">
+                    <input type="hidden" value="aqq98wPiO/ouBjEPGaVtUwlaqzGY6iRhTCVywctqe18MXHPWz9iQ6p88cxPgEHB3NLjnO7fVtgMyLwIfVMoaPoQdzx/u62MJ26S+4uk2UGP9HMnjfSh/zSknY6THbteI" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-8x-email">Email<span class="form-asterisk">*</span></label>
