--- a/Paths & End Points.html
+++ b/Paths & End Points.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Website Maker</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-96" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 4.5rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-96" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 4.5rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -209,7 +209,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Ua/okoMliH2bjE94FOSevkmmEjpL/aKfyRz5jt0tz2vSuSEsO9UuxuHnZrzc987Ax2sybd/g6OxMhCh2LjN2prfORj6fxfrjH5oHpqwuR8wXOy79CnV/9WYteBKUIprq" data-form-email="true">
+                    <input type="hidden" value="Jbfl8uppNEEWDfI8XB82/dPx4INb530qKcgIRpLsAiC0XS1GLqXVZ1EVLcyzIyqCXFFMAoFjsg9CB0aH6xG8g57pjOfbPVbByogdVeTPLMThUb2i74h/cFIet1+tQfzp" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-95-email">Email<span class="form-asterisk">*</span></label>
