--- a/Stopping Gun Violence.html
+++ b/Stopping Gun Violence.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Builder</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-7m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">https://mobirise.com/</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-7m" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -137,7 +137,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="I2fwp5ZXGY5fnSUpB/Vu418D1gRi/eWJMQeadqn8nJPTsfxUMnvNTki754+RhLRJAnyBG47W7p8TxssLMG/rkTU2QpEBnB4BYe2zhyllSHCfJExc/DpBLRzKWtVoJ+Iv" data-form-email="true">
+                    <input type="hidden" value="xe2bPrLFCJB+S3hZCBXoo6ceyU9xUfEF0E7TWfr/0AnZr5LiTSlIJYkHB2GGfUvbrEeNAjRq0zuUIb9RAPLhbGO1PFJKKlVzadOiEQk7YVRF+OgG2WkAM9BjAERyY6nk" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-7j-email">Email<span class="form-asterisk">*</span></label>
