--- a/adobepgallery.html
+++ b/adobepgallery.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-40" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise Site Generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-40" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -221,7 +221,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="LfPa1HV+HcpoI17iO5V7u68FfSulgejVoVBPUFYO7IXkXarZNZkIRNfse1kXjoLx+9hDBBeuqAVQHyIB/rG/My4eLSBpXxUD2i72bTBx9xSYi5TKqeTfOAqf4xaQVypU" data-form-email="true">
+                    <input type="hidden" value="vKEnr4y4r/XDPvzCXhBKIqefOz4dWNyHAfojjBQST5zUCqzl2Ql3Tz2opgOXF0aaCcm6CFNtr9RYL4bSPhlZyXzNfmiKW3yw481tGk6Awx6iYX+mGIv2oJqLgnArJQcP" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
