--- a/12 Inch Record.html
+++ b/12 Inch Record.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">best mobile site generator</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-8y" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple wysiwyg website building</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-8y" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -137,7 +137,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="Al+z7B2YZZ9vPRNOCpz3qN3Y0sLzBrYSbAi3z1sAVNVq0P/YZV+q75NvRUfDl7ywxSeAHRCOg3eehwdPDVFA/hxXeopJWRb738Csc8Hid1XkTHdihsBun/roxuwWg3Do" data-form-email="true">
+                    <input type="hidden" value="Xoa1HecGE5eQclPWQjKV2EBfxEPlF+zy7hAOXHDsCbwkGJjvFtNp689zwzLYwau2VoZpp6yPwlOUlcHjqIF6d4BZ2PWiqamNgEcBzoeJ7UM/eA0QJbnMeymnYx4KrgQx" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-8x-email">Email<span class="form-asterisk">*</span></label>
