--- a/Paths & End Points.html
+++ b/Paths & End Points.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">mobile site development</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-96" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 4.5rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">simple web page building software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-96" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 4.5rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -209,7 +209,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="3nEmm2EugnOFi1m3meee7L/OwHPCv4ubUpTt2BdP03xPsW7FRUFtSFhj+icIQ3g3knn0Z5tsjN+GsKaH1rN9NxdMbAm3qv9lmSBcUd1jdhox7C/QJF1LxY352CK0b4It" data-form-email="true">
+                    <input type="hidden" value="kmwngPdVFzrH7Gtd7H/ndYn9a8HTOHZBAmqlMb/6KcF7w2dNVyx6hvhFfsl6RZmwmq+x86M/VhZFanBWW3bE0vKVejerS9YUxoO5s1q3v8TD9mBpDO5P3yFsVpFS+KAb" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-95-email">Email<span class="form-asterisk">*</span></label>
