--- a/Sounds&Sights of the 60s.html
+++ b/Sounds&Sights of the 60s.html
@@ -59,7 +59,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">top web site building software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-7q" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
+<section class="engine"><a rel="external" href="https://mobirise.com">best wysiwyg website creator software</a></section><section class="mbr-gallery mbr-section mbr-section-nopadding mbr-slider-carousel mbr-after-navbar" id="gallery3-7q" data-filter="false" style="background-color: rgb(0, 0, 0); padding-top: 6rem; padding-bottom: 1.5rem;">
     <!-- Filter -->
     
 
@@ -137,7 +137,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="y+vCCsAABAwjITvIJmZ5NxHBILvQxk42Zee1t4nJP+tOmrk3mCB7eGnuiOrI+TdZ/wiA2LBGCX7CP3BUAjdcH+mpReCtP9L5qLxNFmrrwOvCNQKnPk5TvR7KNChi1m3y" data-form-email="true">
+                    <input type="hidden" value="5H6z0DL0upwsEMZ5aWIWcN2RmdWK3WUvy6Oj9VLsLLOKwz5DlTMx6qZjeEET20UNkAW7WWx4U4k6gESu69UxEF/aLfs7D2LXEgN9Sy72LkgNRl0YpPLG0b2a8dyZZ2yC" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-7o-email">Email<span class="form-asterisk">*</span></label>
