--- a/continuation.html
+++ b/continuation.html
@@ -57,7 +57,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">simple bootstrap site maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-3j" style="background-image: url(assets/images/black-and-white-rose-1280x1024-2000x1600.jpg);">
+<section class="engine"><a rel="external" href="https://mobirise.com">wysiwyg web page maker software</a></section><section class="mbr-section mbr-section-hero mbr-section-full mbr-parallax-background mbr-after-navbar" id="header4-3j" style="background-image: url(assets/images/black-and-white-rose-1280x1024-2000x1600.jpg);">
 
     <div class="mbr-overlay" style="opacity: 0.5; background-color: rgb(0, 0, 0);"></div>
 
@@ -99,7 +99,7 @@ Phone: (786)-397-1094<br><br></p>
                     <div hidden="" data-form-alert-success="true">Thanks for filling out form!</div>
                 </div>
                 <form action="https://mobirise.com/" method="post" data-form-title="MESSAGE">
-                    <input type="hidden" value="hr+Sow6gg0BaPfGjfopWiuiYr7BxhSNXsy6TvCWVoI2JkkJxMIkv3bSx3fWzBQn50bxORCAoXMKK4XeHfx0Ej3ZJfeX9NiDy8yfolwU5HFwf/yENUcEpgnfDB4CALGwd" data-form-email="true">
+                    <input type="hidden" value="0ofajb1AP895zahEL+EX21cG3g09lhQIX/uq/4KqXzPeGabjvZ10vTcJVW10r+uoDG5YPd3Gu+YKfD86vbWlTDJVfsWd/0cqaxwjVyDAPH4a5+etFRWt1j5R/ZwinEDP" data-form-email="true">
                     
                     <div class="form-group">
                         <label class="form-control-label" for="contacts4-4m-email">Email<span class="form-asterisk">*</span></label>
